# archi-kernel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml  pages.yml
src/: brep.rs  error.rs  lib.rs  math.rs  tolerance.rs
src/boolean/: coplanar_rules.rs  half_space.rs  mod.rs  support.rs
src/boolean/poly2d/: arrangement.rs  classify.rs  error.rs  geom.rs  intersect.rs  mod.rs  reconstruct.rs  region.rs  snap.rs
src/clash/: aabb.rs  fem.rs  mod.rs  sleeve.rs
src/csg/: ids.rs  member.rs  mod.rs  node.rs  profile.rs
src/curved/: cone_panel.rs  cylinder_panel.rs  domain.rs  error.rs  mesh.rs  mod.rs  sphere_panel.rs  trim.rs
src/geom/: curve.rs  ids.rs  mod.rs  plane_store.rs  surface.rs  vertex.rs
src/intersect/: line_plane.rs  mod.rs  plane_cylinder.rs  plane_plane.rs
src/mass/: face_area.rs  mod.rs  properties.rs  volume.rs
src/model/: dag.rs  mod.rs  takeoff.rs
src/predicate/: exact.rs  mod.rs
src/primitives/: curve.rs  cylinder.rs  line.rs  mod.rs  plane.rs
src/profile/: mod.rs
src/section/: mod.rs
src/tess/: cylinder.rs  intern.rs  mod.rs  plane.rs
src/topo/: arena.rs  mod.rs  store.rs  validate.rs
tests/: adversarial_boolean.proptest-regressions  adversarial_boolean.rs  analytic.rs  clash.rs  cone_panel.rs  coplanar.rs  curved_panel.rs  extrude.rs  half_space.rs  mass_properties.rs  model_dag.rs  poly2d_arcs.proptest-regressions  poly2d_arcs.rs  poly2d_degeneracy.rs  poly2d_properties.rs  prismatic.rs  prismatic_arcs.rs  quantity.rs  regress_mass.rs  regress_poly2d_jitter.rs  regress_poly2d_tangent.rs  regress_prismatic.rs  regress_profile.rs  regress_section_coplanar.rs  regress_sleeve_plane.rs  regress_tess_seam.rs  regress_topo.rs  section_drawing.rs  sphere_panel.rs  tess.rs  topology.rs
viewer/: building.js  curved-building.js  dbgnew.mjs  index.html  main.js  package-lock.json  package.json  record.mjs  shot.mjs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+5 files in other folders)
