[package]
name = "archi-kernel"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["s-hosomi"]
repository = "https://github.com/s-hosomi/archi-kernel"
description = "Domain-specific B-rep geometry kernel for building simulation: analytic surfaces (planes + cylinders) with closed-form intersections"

[dependencies]
robust = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
proptest = "1"
serde_json = "1"
