[package]
name = "archi-kernel-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "wasm-bindgen bindings for archi-kernel: build CSG models, evaluate, mesh, section, take off quantities and clash-check from JavaScript"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
archi-kernel = { path = "..", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
